--- a/index.html
+++ b/index.html
@@ -86,14 +86,13 @@
                 <span>{{atualMarine.WindChillC}}&#176;C</span>
 
             </div>
-            <ul class="list-group">
+            <ul class="list-group" style="position: relative;">
 
                 <li class="list-group-item">
                     <h3>
                         Escolha sua Praia
                     </h3>
                 </li>
-
                 <li class="list-group-item">
                     <select class="form-control" ng-options="item.name for item in locais" ng-model="obj_est">
                         <option value="">Selecione o Estado</option>
@@ -110,18 +109,7 @@
                     </select>
                 </li>
 
-                <li class="list-group-item">
-                    <input type="text" class="form-control" ng-model="busca" placeholder="Buscar"/>
-                    <div  class="busca-praias">
-                        <div ng-repeat="item in locais">
-                            <div ng-repeat="item2 in item.cidades">
-                                <div ng-repeat="item3 in item2.praias| filter:{name:busca} | orderBy:name" ng-show="busca.length > 0">
-                                    <a href="" ng-click="carregaWeatherBusca(item3)">{{item3.name}}, {{item.code| uppercase}} - {{item2.name}}</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </li>
+
             </ul>
         </nav>
         <div class="over-layer"></div>
@@ -404,9 +392,9 @@
             </div>
             <div class="row rodape">
                 <div class="col-md-12">
-                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <ins class="adsbygoogle"
-                         style="display:inline-block;width:100%;height:90px;"
+                         style="display:inline-block;width:100%;height:70px;"
                          data-ad-client="ca-pub-8292462256462069"
                          data-ad-slot="5075994036"></ins>
                     <script>
@@ -488,9 +476,11 @@
 
                     function changeTab(idx) {
                         tmp = idx;
-                        tmp = (-idx * 100) + "%";
-                        $('.tab-content-in > div')[idx].parentNode.style.transform = "translate(" + tmp + ")";
-                        $('.tab-content-in > div')[idx].parentNode.setAttribute('current', idx);
+                        tmp = (-idx * 100);
+                        $('.tab-content-in').css({
+                            transform: "translate(" + tmp + "%)"
+                        });
+                        $('.tab-content-in ').attr('current', idx);
                         $('.tab-content-in > div').removeClass("tab-content-active");
                         $('.tab-content-in > div')[idx].classList.add("tab-content-active");
                         $('.tab-menu > ul > li').removeClass('tab-menu-active');
@@ -642,7 +632,7 @@
 
                 </div>
                 <div class="col-md-12 modal-foot">
-                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <ins class="adsbygoogle"
                          style="display:inline-block;width:100%;height:90px;"
                          data-ad-client="ca-pub-8292462256462069"
@@ -753,7 +743,7 @@
 
                 </div>
                 <div class="col-md-12 modal-foot">
-                    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+                    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
                     <ins class="adsbygoogle"
                          style="display:inline-block;width:100%;height:90px;"
                          data-ad-client="ca-pub-8292462256462069"
@@ -767,6 +757,6 @@
         </div>
 
 
-        
+
     </body>
 </html>
